pkg/config/analysis/analyzers/testdata/deprecation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: istio-multicluster-egressgateway
  namespace: istio-system
spec:
  # workloadLabels is deprecated
  workloadLabels:
    istio: egressgateway
  # filters is deprecated
  filters:
    - listenerMatch:
        portNumber: 15443
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: productpage
  namespace: foo
spec:
  hosts:
    - productpage
  http:
    - fault:
        delay:
          percent: 50
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: no-selector
  namespace: default
spec:
  ingress:
    - port:
        number: 9080
      defaultEndpoint: unix:///var/run/some.sock
  egress:
    - hosts:
        - "./*"
  outboundTrafficPolicy:
    mode: ALLOW_ANY
    egressProxy:
      host: example
      port:
        number: 9080
---
apiVersion: config.istio.io/v1alpha2
kind: QuotaSpec
metadata:
  name: request-count
  namespace: istio-system
spec:
  rules:
    - quotas:
        - charge: 1
          quota: requestcount
